--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
 MONGO_URI=mongodb+srv://ecommerce:ecommerce@cluster0.icdzu.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 
-# PORT=5000
+NODE_ENV=production  #para producción
+#NODE_ENV=development #para desarrollo local.
 
 
 ADMIN_EMAIL=admin@empresa.com
